memory-engine-mcp/tests/snapshots/depth_shaping__explain_fact_sparse.snap
---
source: memory-engine-mcp/tests/depth_shaping.rs
assertion_line: 197
expression: body
---
fact_id: 1
scope_path: /
state: Active
