memory-engine-mcp/tests/snapshots/depth_shaping__get_fact_full.snap
---
source: memory-engine-mcp/tests/depth_shaping.rs
expression: body
---
access_count: 0
base_importance: 0.5
content: Rust is a systems programming language with zero-cost abstractions
content_hash: 8d720581b60ae95d28658d390bf68a2d
embedding_dim: 8
fact_type: Semantic
id: 1
importance_score: 0.5
is_pinned: false
last_accessed: "[REDACTED]"
metadata: {}
scope: ""
scope_id: 1
source_event_id: ~
surfaced_at: "[REDACTED]"
t_created: "[REDACTED]"
t_expired: "[REDACTED]"
t_invalid: "[REDACTED]"
t_valid: "[REDACTED]"
