memory-engine-mcp/tests/snapshots/depth_shaping__get_fact_standard.snap
---
source: memory-engine-mcp/tests/depth_shaping.rs
assertion_line: 139
expression: body
---
access_count: 0
content: Rust is a systems programming language with zero-cost abstractions
fact_type: Semantic
id: 1
importance: 0.5
importance_score: 0.5
is_pinned: false
last_accessed: "[REDACTED]"
metadata: {}
scope: ""
scope_id: 1
source_event_id: ~
surfaced_at: "[REDACTED]"
t_created: "[REDACTED]"
t_expired: "[REDACTED]"
t_invalid: "[REDACTED]"
t_valid: "[REDACTED]"
