memory-engine-mcp/tests/snapshots/depth_shaping__query_result_sparse.snap
---
source: memory-engine-mcp/tests/depth_shaping.rs
assertion_line: 282
expression: body
---
count: 1
results:
  - content: Neural networks learn representations
    id: 1
    importance_score: 0.5
    match_type: Fts
    scope: ""
    score: -0.000001
