memory-engine-mcp/tests/snapshots/depth_shaping__query_result_standard.snap
---
source: memory-engine-mcp/tests/depth_shaping.rs
expression: body
---
count: 1
diagnostics:
  candidates_before_filter: 1
  expired_matches: ~
  fts_candidates: 1
  results_returned: 1
  vector_candidates: 0
results:
  - access_count: 0
    base_importance: 0.5
    content: Neural networks learn representations
    fact_type: Semantic
    id: 1
    importance_score: 0.5
    is_pinned: false
    last_accessed: "[REDACTED]"
    match_type: Fts
    metadata: {}
    scope: ""
    scope_id: 1
    score: -0.000001
    source_event_id: ~
    surfaced_at: "[REDACTED]"
    t_created: "[REDACTED]"
    t_expired: "[REDACTED]"
    t_invalid: "[REDACTED]"
    t_valid: "[REDACTED]"
