memory-engine-mcp/tests/snapshots/depth_shaping__resume_context_full.snap
---
source: memory-engine-mcp/tests/depth_shaping.rs
assertion_line: 436
expression: body
---
due: []
high_importance: []
kb_stubs: []
pinned:
  - access_count: 0
    content: Critical pinned fact
    content_hash: 2e54b5958121f71d211e17dfbbafd88d
    embedding_dim: 8
    fact_type: Semantic
    id: 1
    importance: 0.95
    importance_score: 0.95
    is_pinned: true
    last_accessed: "[REDACTED]"
    metadata: {}
    scope: ""
    scope_id: 1
    source_event_id: ~
    surfaced_at: "[REDACTED]"
    t_created: "[REDACTED]"
    t_expired: "[REDACTED]"
    t_invalid: "[REDACTED]"
    t_valid: "[REDACTED]"
recent: []
