memory-engine-mcp/tests/snapshots/depth_shaping__resume_context_sparse.snap
---
source: memory-engine-mcp/tests/depth_shaping.rs
assertion_line: 372
expression: body
---
due: []
high_importance: []
kb_stubs: []
pinned:
  - content: Critical pinned fact
    id: 1
    importance_score: 0.95
    scope: ""
recent: []
