memory-engine-mcp/tests/snapshots/depth_shaping__resume_context_standard.snap
---
source: memory-engine-mcp/tests/depth_shaping.rs
assertion_line: 404
expression: body
---
due: []
high_importance: []
pinned:
  - access_count: 0
    content: Critical pinned fact
    fact_type: Semantic
    id: 1
    importance: 0.95
    importance_score: 0.95
    is_pinned: true
    last_accessed: "[REDACTED]"
    metadata: {}
    scope: ""
    scope_id: 1
    source_event_id: ~
    surfaced_at: "[REDACTED]"
    t_created: "[REDACTED]"
    t_expired: "[REDACTED]"
    t_invalid: "[REDACTED]"
    t_valid: "[REDACTED]"
recent: []
